<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Math Question Service</string>
    <string name="no_text" />
    <string name="default_notification_channel_id">math_question_task_default_channel</string>
    <string name="default_notification_channel_name">math_question_task_news</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam,</string>
    <string name="am">am</string>
    <string name="pm">pm</string>
    <string name="ago">ago</string>
    <string name="second">second</string>
    <string name="seconds">seconds</string>
    <string name="min">min</string>
    <string name="mins">mins</string>
    <string name="hr">hr</string>
    <string name="hrs">hrs</string>
    <string name="in_2_days">in 2 days</string>
    <string name="in_3_days">in 3 days</string>
    <string name="in_4_days">in 4 days</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="yesterday">yesterday</string>
    <string name="just_now">just now</string>
    <string name="_2_days_ago">2 days ago</string>
    <string name="_3_days_ago">3 days ago</string>
    <string name="_4_days_ago">4 days ago</string>
    <string name="in">in</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="please_wait">Please wait...</string>
    <string name="error_while_open_link">Error while open link</string>
    <string name="share_via">Share via</string>
    <string name="no_connection">No connection</string>
    <string name="server_connection_faild">Server Connection Faild!</string>
    <string name="something_went_wrong_please_try_again_">Something went wrong, Please try again.</string>
    <string name="no_connection_tap_to_retry">No internet connection</string>
    <string name="no_internet_connection">No internet connection, Please try again.</string>
    <string name="you_are_offline">You are offline</string>
    <string name="server_connection_failed">Server connection failed</string>
    <string name="try_again">Try again</string>
    <string name="error">Error</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_underline">
    <u>Cancel</u></string>
    <string name="ok">OK</string>
    <string name="oh_no">Oh no!</string>
    <string name="log_out">Log out</string>
    <string name="are_you_sure_you_want_to_logout_and_clear_all_data_">Are you sure you want to logout, and clear all data?</string>
    <string name="logout_successfully_completed">Logout successfully completed</string>
    <string name="no_results">No Results</string>
    <string name="sorry_there_are_no_results">Sorry there are no results</string>
    <string name="add_new_task">Add New Task</string>
    <string name="first_number">First number</string>
    <string name="second_number">Second Number</string>
    <string name="operator">Operator</string>
    <string name="delay_time_in_seconds">Delay Time in seconds</string>
    <string name="calculate">Calculate</string>
    <string name="required_field">Required field</string>
    <string name="you_cant_divide_on_zero">You can\'t divide on Zero</string>
    <string name="select_math_operator">Select math operator</string>
    <string name="problem_text">Q %s %s %s = %s</string>
    <string name="location_text">(%s, %s)</string>
    <string name="problem_number_text">Q %s</string>
    <string name="delay_text">%ss</string>
    <string name="question_added_successfully">Question added successfully</string>
    <string name="location_required">Location required</string>
    <string name="you_must_enable_device_location_to_get_data_based_on_your_location">You must enable device location to get data based on your location</string>
    <string name="locate_me">Locate Me</string>
    <string name="please_open_location_or_wait_to_get_your_location">Please open location or wait to get your location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="create">create</string>
    <string name="home">home</string>
</resources>

