<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/big_round_corner_bg_white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtview_dialog_sure_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/avenir_heavy"
            android:gravity="center"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_12ssp"
            android:visibility="visible" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:minHeight="@dimen/_10sdp">

            <TextView
                android:id="@+id/txtview_dialog_sure_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_medium"
                android:gravity="center"
                android:includeFontPadding="false"
                android:padding="@dimen/_10sdp"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/taupe"
                android:textSize="@dimen/_12ssp" />
        </ScrollView>

        <LinearLayout
            android:id="@+id/layoutActions_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="end"
            android:padding="@dimen/_10sdp"
            android:visibility="visible">

            <TextView
                android:id="@+id/btn_dialog_sure_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/big_round_corner_transparent_bg_transparent_gray_selector"
                android:fontFamily="@font/avenir_medium"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/cancel_underline"
                android:textAllCaps="true"
                android:textColor="@color/taupegray_2"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/btn_dialog_sure_Submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/big_round_corner_color_accent_selector"
                android:fontFamily="@font/avenir_medium"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

        <TextView
            android:id="@+id/btn_dialog_sure_Ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="@drawable/big_round_corner_color_accent_selector"
            android:fontFamily="@font/avenir_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/_10sdp"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />

    </LinearLayout>
</layout>