<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_errorCase"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_16sdp">


        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/ivError"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/no_connection"
            app:layout_constraintBottom_toTopOf="@+id/tvErrorTitle_connection"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvErrorTitle_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/avenir_heavy"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/oh_no"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintBottom_toTopOf="@+id/tvErrorBody_connection"
            app:layout_constraintEnd_toEndOf="@+id/tvErrorBody_connection"
            app:layout_constraintStart_toStartOf="@+id/tvErrorBody_connection" />

        <TextView
            android:id="@+id/tvErrorBody_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/avenir_heavy"
            android:gravity="center"
            android:includeFontPadding="false"
            android:lineSpacingExtra="@dimen/_10sdp"
            android:text="@string/server_connection_faild"
            android:textColor="@color/taupe"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@+id/tvRetry"
            app:layout_constraintEnd_toEndOf="@+id/tvRetry"
            app:layout_constraintStart_toStartOf="@+id/tvRetry" />

        <TextView
            android:id="@+id/tvRetry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:background="@drawable/round_corner_color_accent_selector"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/avenir_heavy"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/_10sdp"
            android:text="@string/try_again"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="42dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>